# Linus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  ARCHITECTURE.md  BRANCHING.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  GLOSSARY.md  LICENSE  README.md  ROADMAP.md  SAFETY.md  SETUP_STEPS.md  VISION.md  environment.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ruff-gate.yml
benchmarks/dan_tasks/: README.md  rag-eval-questions.md
benchmarks/results/: dan_tasks_baseline_2026-05-16.json  dan_tasks_baseline_2026-05-18-qwen3-8b.json  dan_tasks_baseline_2026-05-18-qwen3.6-27b.json
docs/: README.md  curation-log.md  curation-protocol.md  demo-script-2026-05-25.md  maestro-worker-protocol.md  open-questions.md  paper-landscape.md  repo-landscape.md  security-log.md  security-synthesis.md  skills-and-practices-synthesis.md  top-questions.md  total-landscape.md
docs/adr/: 0001-project-name-and-namesake.md  0002-orchestration-backend-as-core-product.md  0003-knowledgebase-submodule.md  0004-mambaforge-conda-env.md  0005-openai-compatible-protocol.md  0006-pmetal-phase1-evaluation.md  0007-claude-code-terminal-maestro.md  0008-openclaw-frontend-native-app.md  0009-lm-studio-discovery-only.md  0010-engineering-conventions-from-kb.md  0011-lightweight-branching-then-gitflow.md  0012-pmetal-primary-inference-candidate.md  0013-bitnet-2b4t-spike.md  0014-phase6-finetuning-lane-deferred.md  0015-kb-dual-graph-substrates.md  0016-kb-spec-split-convention.md  0017-harness-plurality-roles.md  0018-mcp-extensibility-substrate.md  0019-kb-ingest-quality-surface.md  0020-orchestration-scope-bounded.md  0021-phase5c-claw-code-local.md  0022-parallel-worker-write-coordination.md  0023-output-interface-citations-llm-wiki.md  0024-security-posture-supply-chain.md  0025-curation-protocol.md  0026-planning-write-back-cadence.md  0027-linus-practice-stance-batch.md  0028-memory-architecture-phase2-pillar.md  0029-episodic-memory-substrate.md  0030-scratchpad-first-class-artifact.md  0031-router-primitives-cot-budget-memory-mode.md  0032-in-context-window-cap-policy.md  0033-cot-gap-fingerprint-registry-property.md  0034-worker-size-vs-cot-length-comparison.md  0035-arc-agi-as-memory-diagnostic.md  0036-kv-cache-continuity-architectural-constraint.md  0037-ttt-apple-silicon-viability-spike.md  0038-mingru-mlx-port-spike.md  0039-episodic-schema-hybrid-leaf-summary.md  0040-faithfulness-audit-deferred.md  (+23 more)
docs/audits/: 2026-05-18-core-doc-alignment.md  2026-05-18-repo-pull-status.md  2026-05-18-repo-pull-status.txt  README.md
docs/bug-sweeps/: 2026-05-20-knowledge-sweep.md  2026-05-20-memory-sweep.md  2026-05-20-server-sweep.md  2026-05-20-tools-sandbox-tests-sweep.md  2026-06-02-cluster-explorer-kb-label-granularity.md
docs/cybersecurity-notes/: 01-NIST-Framework-v1.1.md  02-NIST-SP-800-207-ZeroTrust.md  03-NIST-SP-800-171r2-CUI.md  04-NCSC-China-Genomics.md  05-HHS-Cyberthreats-Biotech.md  06-Foley-Biotech-IP-Confidentiality.md  07-NCCoE-Genomics-Workshop.md  08-NIST-SP-800-160v1.md  09-tomshardware-cursor-claude-incident.md  README.md  index.md
docs/landscapes/: README.md  paper-landscape.md  repo-landscape.md  synthesis-landscape.md  total-landscape.md
docs/paper-notes/: 0549.md  1-s2.0-S0022283626000513-main.md  13337-ZhouQ.md  1910.07467.md  2002.05202.md  2003.02320v6.md  2024.12.19.629561v2.md  2025.03.02.641084v1.md  2025.04.19.649272v1.md  2025.05.13.653614v2.md  2025.07.20.665723v2.md  2025.07.21.665832v2.md  2025.09.12.675911v1.md  2026.02.09.704801v1.md  2026.03.19.712954v1.md  2026.03.31.715748v1.md  2026.04.22.720063v1.md  2026.05.08.723784v1.md  2102.05095v4.md  2104.09864.md  2203.15556v1.md  2205.11916v4.md  2208.07262v1.md  2210.02747.md  2303.12712v5.md  2304.05332v1.md  2305.13245.md  2305.15408v5.md  2306.03809v1.md  2306.12456v2.md  2310.07923v5.md  2310.11453v1.md  2311.12351.md  2312.11514v3.md  2401.00422v3.md  2402.03755v1.md  2402.17764v1.md  2406.17557v2.md  2407.10362v3.md  2407.10424v5.md  (+90 more)
docs/protocols/: README.md  curation-protocol.md  maestro-protocol.md  maestro-worker-protocol.md
docs/questions/: README.md  answered-questions.md  open-questions.md  top-questions.md
docs/repo-notes/: ANE.md  AgentPrometheus.md  AgenticResearchWiki.md  Bacformer.md  BioReason.md  BitNet.md  BixBench.md  Bonsai-demo.md  ClawBio.md  CodeV.md  INDEX.md  Kimi-K2.md  LAB-Bench.md  Letta.md  MiroFish-Offline.md  MoneyPrinterV2.md  OmegaWiki.md  OpenBB.md  OptimusKG.md  ProtiCelli.md  QiMeng-MuPa.md  QiMeng-SALV.md  QiMeng-cpu-v1.md  QuantAgent.md  Sketch2Simulation.md  TheKnowledge.md  TradingAgents.md  WeKnora.md  agent-skills-for-context-engineering.md  agentic-wiki-builder.md  agentmemory.md  algebrica.md  anamnesis.md  atomic-knowledge.md  autogen.md  autoresearch-mlx.md  autoresearch.md  aviary.md  awesome-ai-agent-papers.md  beever-atlas.md  (+96 more)
docs/session-summaries/: 2026-05-03-memory-pillar-session-summary.md  2026-05-03-paper-notes-session-summary.md  2026-05-04-fan-out-session-summary.md  2026-05-05-landscape-rollup-session-summary.md  2026-05-07-planning-update-execution-session-summary.md  2026-05-08-notes-consistency-sweep-session-summary.md  2026-05-08-synthesis-refinement-session-summary.md  2026-05-16-multi-pr-consolidation-arc-session-summary.md  2026-05-16-wave2-fanout-session-summary.md  2026-05-21-fix-and-polish-session-summary.md  2026-06-02-v0.5.0-tag-paperqa-pivot-session-summary.md  README.md  landscape-rollup-session-summary-2026-05-05.md  memory-pillar-session-summary-2026-05-03.md  paper-notes-session-summary-2026-05-03.md  planning-update-session-summary-2026-05-05.md  top-questions-resolution-session-summary-2026-05-03.md
docs/specs/: 2026-05-09-context-foldin-fanout.md  2026-05-10-pr30-cleanup-spec.md  README.md  (+25 more)
experiments/: 2026-05-21-run-kb-pipeline.sh  first-loop-review.md  first-loop.md  first_loop_driver.py  first_loop_output_pass1.txt  first_loop_output_pass2.txt
scripts/: qfin_arxiv_seed.txt  seed_qfin_corpus.py
tests/: conftest.py  test_paperqa_integration.py  test_server.py
(+157 files in other folders)
