[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linus"
description = "Personal AI orchestration backend for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Daniel Browne", email = "dbrowne.up@gmail.com" }
]
keywords = ["llm", "apple-silicon", "mlx", "orchestration", "agent", "rag"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    # These mirror environment.yml; pip install -e . will resolve them within the
    # conda env. Pinning is deliberately loose during Phase 0/1; tighten as we stabilize.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.26",
    "tenacity>=8.2",
    "typer>=0.9",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "jsonlines>=4.0",
    "openai>=1.12",
    "ollama>=0.1.7",
    "tiktoken>=0.5",
    "pypdf>=4.0",    # PDF text extraction (BSD-3); see DEC-0057 re: PyMuPDF/AGPL choice
    "plotly>=5.20",  # Sankey + 3D UMAP scatter for the Cluster Explorer UI
    "pyvis>=0.3",    # interactive knowledge-graph render for the KG Streamlit page
    "paper-qa>=5.0", # Phase 2c citation-grounded paper-corpus QA via local Ollama
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.31",
]
mlx = [
    "mlx-lm>=0.8",
]
knowledge = [
    # KnowledgeBase submodule provides its own deps; these are extras for direct use
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
]
eval = [
    "lm-eval>=0.4",
]
dev = [
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.6",
    # TestClient lives in starlette under fastapi; httpx is required for it.
    "httpx>=0.26",
]
all = [
    "linus[ui,mlx,knowledge,eval,dev]",
]

[project.urls]
Homepage = "https://github.com/dbrowneup/Linus"
Repository = "https://github.com/dbrowneup/Linus"
Issues = "https://github.com/dbrowneup/Linus/issues"

[project.scripts]
# Phase 2a bootstrap: `linus serve` launches the FastAPI orchestration backend
# (uvicorn on $LINUS_HOST:$LINUS_PORT, defaults 127.0.0.1:8000). A full
# Typer-backed CLI lands in a follow-up; for now `serve` is the only command.
linus-serve = "linus.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["linus*"]

[tool.setuptools.dynamic]
version = { attr = "linus.__about__.__version__" }

# --- Ruff configuration ------------------------------------------------------
# Mirrors Archimedes's root ruff.toml so the same Python produces identical
# format + lint output in both repos (Linus is consumed as a submodule under
# Archimedes; drift here shows up as noise in Archimedes PRs).

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "submodules",
    "node_modules",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    # Linus-specific paths (preserved alongside the Archimedes canonical list)
    "modules",        # KnowledgeBase submodule
    "repos",          # reference clones
    "context",        # personal content
    "docs",           # prose, not code
]

[tool.ruff.lint]
# Ruff defaults (E4/E7/E9, F) plus a focused additions list. Mirrors Archimedes.
extend-select = [
    "I",     # isort (import organization)
    "UP",    # pyupgrade (modern Python idioms)
    "B",     # flake8-bugbear (likely bugs)
    "SIM",   # flake8-simplify (cleaner code)
    "RUF",   # ruff-specific rules
]

ignore = [
    "E501",   # line-too-long — ruff format handles wrapping
    "B008",   # function call in default argument — FastAPI Depends() idiom
    # Ambiguous-unicode warnings flag em-dashes, en-dashes, and Greek letters
    # that we use deliberately in prose; style choice, not a bug.
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    # `class X(str, Enum)` → `class X(StrEnum)` changes serialization shape;
    # migration is safe-but-needs-testing, deferred to a dedicated PR.
    "UP042",  # replace-str-enum
    # `int(x)` can be intentional truncation; behavior-preserving auto-removal
    # is risky. Manual case-by-case.
    "RUF046", # unnecessary-cast-to-int
]

[tool.ruff.lint.isort]
known-first-party = ["linus"]

# --- Mypy configuration ------------------------------------------------------

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "modules/",
    "repos/",
    "context/",
]

# --- Pytest configuration ----------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests", "src/linus/tests", "benchmarks", "experiments"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -ra --strict-markers --tb=short --durations=10"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "smoke: marks smoke tests for pre-full-run validation",
    "integration: marks integration tests requiring Ollama/pmetal/etc.",
]

# --- Coverage ----------------------------------------------------------------

[tool.coverage.run]
source = ["src/linus"]
omit = [
    "*/tests/*",
    "*/__about__.py",
]
